--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -392,7 +392,7 @@ td,th{padding:0}
 }
 /*画布分格box结束*/
 /*成绩单开始*/
-#qiwang-text,#mark-canvars{
+#qiwang-text，#mark-canvars{
 	display: none;
 	/*position: absolute;	*/
 }
