--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -145,11 +145,13 @@ textarea{
 .table-bar{
 	width: 100%;
 	height: 60px;
+	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: auto;
 	border-top: 1px solid #E0E0E0;
-	
-}
+
+}}
 .table-bar ul{
 	list-style: none;
 	background: url(../img/icon-blank185#fff.png) ;
